# paligned

./: Cargo.toml  LICENSE  README.md
examples/: ex.rs
src/: lib.rs
